
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {unsigned long* gregs; } ;
struct TYPE_5__ {TYPE_1__ uc_mcontext; } ;
typedef TYPE_2__ ucontext_t ;
typedef int siginfo_t ;


 size_t REG_CR2 ;
 size_t REG_EFL ;
 size_t REG_ERR ;
 size_t REG_SP ;
 size_t REG_TRAPNO ;
 int SIGSEGV ;
 int X86_EFLAGS_IF ;
 scalar_t__ cpl0 ;
 int expected_rsp ;
 int jmpbuf ;
 int printf (char*,...) ;
 int siglongjmp (int ,int) ;
 int sprintf (char*,char*,...) ;
 unsigned short* ssptr (TYPE_2__*) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

__attribute__((used)) static void handler(int sig, siginfo_t *info, void *ctx_void)
{
 ucontext_t *ctx = (ucontext_t*)ctx_void;
 unsigned long sig_err = ctx->uc_mcontext.gregs[REG_ERR];
 unsigned long sig_trapno = ctx->uc_mcontext.gregs[REG_TRAPNO];

 char errdesc[64] = "";
 if (sig_trapno == 14) {
  strcpy(errdesc, " ");
  if (sig_err & (1 << 0))
   strcat(errdesc, "PRESENT ");
  if (sig_err & (1 << 1))
   strcat(errdesc, "WRITE ");
  if (sig_err & (1 << 2))
   strcat(errdesc, "USER ");
  sprintf(errdesc + strlen(errdesc), "at 0x%llX",
   (unsigned long long)ctx->uc_mcontext.gregs[REG_CR2]);
 } else if (sig_err != 0) {
  const char *src = (sig_err & 1) ? " EXT" : "";
  const char *table;
  if ((sig_err & 0x6) == 0x0)
   table = "GDT";
  else if ((sig_err & 0x6) == 0x4)
   table = "LDT";
  else if ((sig_err & 0x6) == 0x2)
   table = "IDT";
  else
   table = "???";

  sprintf(errdesc, " %s%s index %lu, ",
   table, src, sig_err >> 3);
 }

 char trapname[32];
 if (sig_trapno == 13)
  strcpy(trapname, "GP");
 else if (sig_trapno == 11)
  strcpy(trapname, "NP");
 else if (sig_trapno == 12)
  strcpy(trapname, "SS");
 else if (sig_trapno == 14)
  strcpy(trapname, "PF");
 else if (sig_trapno == 32)
  strcpy(trapname, "IRET");
 else
  sprintf(trapname, "%lu", sig_trapno);

 printf("+ State was corrupted: %s #%s(0x%lx%s)\n",
        (sig == SIGSEGV ? "SIGSEGV" : "SIGTRAP"),
        trapname, (unsigned long)sig_err,
        errdesc);

 if (cpl0) {
  printf("  CPL0\n");
  cpl0 = 0;
 }

 if (!(ctx->uc_mcontext.gregs[REG_EFL] & X86_EFLAGS_IF))
  printf("  RFLAGS = 0x%llX (interrupts disabled)\n",
         (unsigned long long)ctx->uc_mcontext.gregs[REG_EFL]);

 if (ctx->uc_mcontext.gregs[REG_SP] != expected_rsp)
  printf("  RSP = 0x%016llX\n",
         (unsigned long long)ctx->uc_mcontext.gregs[REG_SP]);

 unsigned short normal_ss;
 asm ("mov %%ss, %0" : "=rm" (normal_ss));
 if (*ssptr(ctx) != 0x7 && *ssptr(ctx) != normal_ss)
  printf("  SS = 0x%hX\n", *ssptr(ctx));

 siglongjmp(jmpbuf, 1);
}
